--- a/app/src/main/res/layout/popup_textsize.xml
+++ b/app/src/main/res/layout/popup_textsize.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        >
 
         <Button
             android:id="@+id/btn_size_xs"
@@ -17,6 +17,8 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_size_s"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?attr/actionBarItemBackground"
             android:fontFamily="@font/arial"
             android:textSize="@dimen/lineSpacing"
@@ -30,6 +32,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@+id/btn_size_xs"
             app:layout_constraintEnd_toStartOf="@+id/btn_size_m"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?attr/actionBarItemBackground"
             android:fontFamily="@font/arial"
             android:textSize="@dimen/lineSpacing"
@@ -43,6 +46,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@+id/btn_size_s"
             app:layout_constraintEnd_toStartOf="@+id/btn_size_l"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?attr/actionBarItemBackground"
             android:fontFamily="@font/arial"
             android:textSize="@dimen/lineSpacing"
@@ -56,6 +60,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@+id/btn_size_m"
             app:layout_constraintEnd_toStartOf="@+id/btn_size_xl"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?attr/actionBarItemBackground"
             android:fontFamily="@font/arial"
             android:textSize="@dimen/lineSpacing"
@@ -68,6 +73,7 @@
             android:layout_width="@dimen/colorPanelSize"
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@+id/btn_size_l"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="?attr/actionBarItemBackground"
             android:fontFamily="@font/arial"
