--- a/app/src/main/res/layout/popup_textbgcolor.xml
+++ b/app/src/main/res/layout/popup_textbgcolor.xml
@@ -9,14 +9,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_marginStart="@dimen/sideLinePadding"
+        android:layout_marginEnd="@dimen/sideLinePadding"
+        >
 
         <Button
             android:id="@+id/color_back_none"
             android:layout_width="@dimen/colorPanelSize"
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/color_text_white"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/color_panel_none"
             android:layout_margin="10dp"/>
 
@@ -27,6 +31,8 @@
             android:background="@drawable/ic_color_panel"
             app:layout_constraintStart_toEndOf="@id/color_back_none"
             app:layout_constraintEnd_toStartOf="@id/color_back_green"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="10dp"/>
 
         <Button
@@ -35,6 +41,8 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_back_yellow"
             app:layout_constraintEnd_toStartOf="@id/color_back_blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
@@ -44,6 +52,8 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_back_green"
             app:layout_constraintEnd_toStartOf="@id/color_back_red"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
@@ -54,6 +64,8 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_back_blue"
             app:layout_constraintEnd_toStartOf="@id/color_back_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
@@ -63,6 +75,8 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_back_red"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
