--- a/app/src/main/res/layout/popup_video.xml
+++ b/app/src/main/res/layout/popup_video.xml
@@ -15,23 +15,37 @@
         android:layout_gravity="center"
         android:fontFamily="@font/arial"
         android:textSize="@dimen/detailTextSize"
-        android:text="Type the url of youtube video"
+        android:text="@string/url_instruction"
         android:layout_margin="10dp"/>
 
-    <HorizontalScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/edt_url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/arial"
-            android:layout_margin="10dp"
-            android:textSize="@dimen/detailTextSize"
-            />
 
-    </HorizontalScrollView>
+        <HorizontalScrollView
+            android:fillViewport="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <EditText
+                android:id="@+id/edt"
+                android:inputType="textFilter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollHorizontally="true"
+                android:fontFamily="@font/arial"
+                android:layout_margin="10dp"
+                android:textSize="@dimen/detailTextSize"
+                />
+
+
+        </HorizontalScrollView>
+
+    </LinearLayout>
+
+
 
 
 
