--- a/app/src/main/res/drawable/ic_cfrm.xml
+++ b/app/src/main/res/drawable/ic_cfrm.xml
@@ -3,12 +3,328 @@
     android:height="65dp"
     android:viewportWidth="65"
     android:viewportHeight="65">
-
   <path
-      android:pathData="M31.72,46.5l-11.31,-14.71l3.05,-2.35l7.96,10.35l12.02,-18.88l3.25,2.07z"
+      android:pathData="M-1185.91,283.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1177.5,279.73 -1181.27,283.5 -1185.91,283.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1111.91,283.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1103.5,279.73 -1107.27,283.5 -1111.91,283.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1037.91,283.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1029.5,279.73 -1033.27,283.5 -1037.91,283.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-926.91,283.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-918.5,279.73 -922.27,283.5 -926.91,283.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-852.91,283.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-844.5,279.73 -848.27,283.5 -852.91,283.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1037.91,357.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1029.5,353.73 -1033.27,357.5 -1037.91,357.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1111.91,357.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1103.5,353.73 -1107.27,357.5 -1111.91,357.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1037.91,431.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1029.5,427.73 -1033.27,431.5 -1037.91,431.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1037.91,505.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1029.5,501.73 -1033.27,505.5 -1037.91,505.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1111.91,431.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1103.5,427.73 -1107.27,431.5 -1111.91,431.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1185.91,357.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1177.5,353.73 -1181.27,357.5 -1185.91,357.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-1185.91,431.5h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1177.5,427.73 -1181.27,431.5 -1185.91,431.5z"
+      android:strokeAlpha="0.571"
+      android:fillColor="#A09F9F"
+      android:fillAlpha="0.571"/>
+  <path
+      android:pathData="M-444.5,18.5l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"
       android:fillColor="#A09F9F"/>
-
-
-
-
+  <path
+      android:pathData="M-462.08,31.76l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-388.14,16.45h5.22l7.8,22.05h-5l-1.46,-4.53h-8.12l-1.49,4.53h-4.82L-388.14,16.45zM-388.44,30.17h5.65l-2.79,-8.68L-388.44,30.17z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-402.5,42.5h34v6h-34z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-302.16,21.68c0.82,1.13 1.22,2.49 1.22,4.07c0,1.63 -0.41,2.94 -1.24,3.92c-0.46,0.55 -1.14,1.06 -2.03,1.52c1.36,0.49 2.39,1.28 3.08,2.35c0.69,1.07 1.04,2.38 1.04,3.91c0,1.58 -0.39,3 -1.19,4.25c-0.5,0.83 -1.13,1.53 -1.89,2.1c-0.85,0.65 -1.86,1.1 -3.01,1.34c-1.16,0.24 -2.41,0.36 -3.77,0.36h-12.01V18.84h12.88C-305.82,18.89 -303.51,19.84 -302.16,21.68zM-316.63,23.47v5.88h6.48c1.16,0 2.09,-0.22 2.82,-0.66c0.72,-0.44 1.08,-1.22 1.08,-2.34c0,-1.24 -0.48,-2.06 -1.43,-2.46c-0.82,-0.28 -1.87,-0.42 -3.15,-0.42H-316.63zM-316.63,33.76v7.11h6.47c1.16,0 2.06,-0.16 2.7,-0.47c1.17,-0.58 1.75,-1.69 1.75,-3.33c0,-1.39 -0.57,-2.34 -1.7,-2.86c-0.63,-0.29 -1.52,-0.44 -2.66,-0.45H-316.63z"
+      android:strokeWidth="0.5"
+      android:fillColor="#A09F9F"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-451.5,96.69l0,-3.9l-10.27,0l0,3.9l2.86,0l-3.86,19.72l-3.11,0l0,3.9l10.27,0l0,-3.9l-2.66,0l3.87,-19.72z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-398.5,119.5h26v3h-26z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-472.5,180.5L-445.5,180.5"
+      android:strokeWidth="5"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-459.5,167.5L-459.5,194.5"
+      android:strokeWidth="5"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,96L-296.5,96"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,103.33L-304.5,103.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,110.67L-296.5,110.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-328.5,116"
+      android:strokeWidth="5"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,118L-304.5,118"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,243L-296.5,243"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-317.5,250.33L-296.5,250.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-325.5,257.67L-296.5,257.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-317.5,265L-296.5,265"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-326.5,170L-297.5,170"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-322.5,177.33L-301.5,177.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-326.5,184.67L-297.5,184.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-322.5,192L-301.5,192"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M50.5,70.5h47v47h-47z"/>
+  <path
+      android:pathData="M109.5,70.5h47v47h-47z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M168.5,70.5h47v47h-47z"
+      android:fillColor="#EA2621"/>
+  <path
+      android:pathData="M224.5,70.5h47v47h-47z"
+      android:fillColor="#2525BA"/>
+  <path
+      android:pathData="M278.5,71.5h47v47h-47z"
+      android:fillColor="#146D20"/>
+  <path
+      android:pathData="M50.5,130.5h47v47h-47z"
+      android:fillColor="#FCC047"/>
+  <path
+      android:pathData="M109.5,130.5h47v47h-47z"
+      android:fillColor="#97D86C"/>
+  <path
+      android:pathData="M50.5,190.5h47v47h-47z"
+      android:fillColor="#ED4F6A"/>
+  <path
+      android:pathData="M109.5,190.5h47v47h-47z"
+      android:fillColor="#D6133D"/>
+  <path
+      android:pathData="M168.5,190.5h47v47h-47z"
+      android:fillColor="#494949"/>
+  <path
+      android:pathData="M168.5,130.5h47v47h-47z"
+      android:fillColor="#709EFC"/>
+  <path
+      android:pathData="M224.5,130.5h47v47h-47z"
+      android:fillColor="#F96E90"/>
+  <path
+      android:pathData="M278.5,131.5h47v47h-47z"
+      android:fillColor="#9B9B9B"/>
+  <path
+      android:pathData="M-53.28,46.5l-11.31,-14.71l3.05,-2.35l7.96,10.35l12.02,-18.88l3.25,2.07z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-380.77,106.01c0,1.7 -0.2,2.95 -0.6,3.73c-0.63,1.39 -1.99,2.09 -4.08,2.09c-2.1,0 -3.47,-0.7 -4.09,-2.09c-0.4,-0.78 -0.61,-2.03 -0.61,-3.73V92.5h-5.27v13.53c0,2.64 0.41,4.69 1.23,6.16c1.53,2.69 4.45,4.04 8.74,4.04s7.2,-1.35 8.72,-4.04c0.82,-1.47 1.23,-3.52 1.23,-6.16V92.5h-5.27V106.01z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-208.42,94.45h5.69l8.51,24.05h-5.45l-1.59,-4.94h-8.85l-1.63,4.94h-5.26L-208.42,94.45zM-208.76,109.41h6.16l-3.04,-9.46L-208.76,109.41z"
+      android:fillColor="#5B5B5B"/>
+  <path
+      android:pathData="M-187.5,101.5l0,-3l-11.84,0l1.07,3z"
+      android:fillColor="#5B5B5B"/>
+  <path
+      android:pathData="M-187.5,107.17l0,-3l-9.81,0l1.07,3z"
+      android:fillColor="#5B5B5B"/>
+  <path
+      android:pathData="M-187.5,112.83l0,-3l-7.79,0l1.07,3z"
+      android:fillColor="#5B5B5B"/>
+  <path
+      android:pathData="M-187.5,118.5l0,-3l-5.76,0l1.07,3z"
+      android:fillColor="#5B5B5B"/>
+  <path
+      android:pathData="M-233.42,-83.55h5.69l8.51,24.05h-5.45l-1.59,-4.94h-8.85l-1.63,4.94h-5.26L-233.42,-83.55zM-233.76,-68.59h6.16l-3.04,-9.46L-233.76,-68.59z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-226.32,-83.57L-217.68,-59.43"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-225.5,-81L-213.5,-81"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-225.5,-75.33L-213.5,-75.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-225.5,-69.67L-213.5,-69.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-225.5,-64L-213.5,-64"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-401.5,181.5h32v3h-32z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-381.34,178.87l-4.58,-1.08c-1.77,-0.41 -2.92,-0.77 -3.47,-1.08c-0.85,-0.46 -1.27,-1.16 -1.27,-2.09c0,-1.01 0.43,-1.8 1.29,-2.37c0.86,-0.57 2.01,-0.85 3.45,-0.85c1.29,0 2.38,0.22 3.25,0.65c1.3,0.66 2.01,1.77 2.1,3.34h5.24c-0.1,-2.77 -1.13,-4.89 -3.09,-6.34c-1.96,-1.46 -4.34,-2.18 -7.12,-2.18c-3.33,0 -5.86,0.77 -7.58,2.32c-1.72,1.55 -2.58,3.49 -2.58,5.82c0,1.85 0.47,3.34 1.39,4.48h15.05C-379.89,179.27 -380.57,179.06 -381.34,178.87z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-376.07,181.5h-15.32c1.04,0.41 2.38,0.79 4.05,1.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.37,-0.44 -0.65,-1.06 -0.84,-1.84h-5.32c0.18,2.32 1.15,4.18 2.91,5.56c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94C-374.5,184.19 -375.03,182.67 -376.07,181.5z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-209.66,185.34l9.16,-9.15l9.16,9.15z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-262.66,184.34l9.16,-9.15l9.16,9.15"
+      android:strokeWidth="4"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-118.34,176.19l-9.16,9.15l-9.16,-9.15z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-215.5,21L-186.5,21"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-206.5,28.33L-186.5,28.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-206.5,36L-186.5,35.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-215.5,43L-186.5,43"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-210,27l0,10l-5.5,-5z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-140,36.5l0,-9l5.5,4.5z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-140.5,21L-111.5,21"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-131.5,28.33L-111.5,28.33"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-131.5,36L-111.5,35.67"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-140.5,43L-111.5,43"
+      android:strokeWidth="3"
+      android:fillColor="#00000000"
+      android:strokeColor="#A09F9F"/>
+  <path
+      android:pathData="M-111.02,247.22c-0.6,-3.82 -3.69,-3.95 -3.69,-3.95c-12.53,-0.86 -23.85,0.04 -23.85,0.04c-2.57,0.56 -3.56,2.57 -3.82,5.06c-0.26,2.49 -0.62,7.99 0,12.57c0.64,4.76 4.33,4.68 4.33,4.68c3.99,0.46 19.6,0.34 23.42,-0.09c3.82,-0.43 3.95,-5.49 3.95,-5.49S-110.11,252.99 -111.02,247.22zM-129.72,258.59v-9.22l8.67,4.61L-129.72,258.59z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:pathData="M-200.05,266.5c-3.75,0 -7.49,0 -11.24,0c-1.44,0 -2.55,-0.84 -2.87,-2.19c-0.05,-0.21 -0.08,-0.44 -0.08,-0.66c0,-5.66 0,-11.32 0,-16.98c0,-1.4 0.94,-2.55 2.31,-2.83c0.22,-0.04 0.46,-0.05 0.69,-0.05c7.46,0 14.93,0 22.39,0c1.54,0 2.68,0.91 2.96,2.36c0.02,0.1 0.02,0.21 0.02,0.31c0,5.8 0,11.59 0,17.39c0,1.24 -1.13,2.49 -2.37,2.61c-0.27,0.03 -0.54,0.04 -0.81,0.04C-192.71,266.5 -196.38,266.5 -200.05,266.5zM-202.82,255.19c-2.84,2.84 -5.66,5.66 -8.46,8.46c7.48,0 15.01,0 22.52,0c-2.35,-2.35 -4.69,-4.69 -7.06,-7.06c-0.92,0.92 -1.86,1.86 -2.8,2.81C-200.04,257.97 -201.45,256.56 -202.82,255.19zM-190.11,250.89c0,-1.57 -1.27,-2.85 -2.84,-2.84c-1.57,0.01 -2.82,1.26 -2.83,2.82c-0.01,1.58 1.25,2.84 2.83,2.85C-191.38,253.73 -190.11,252.46 -190.11,250.89z"
+      android:fillColor="#A09F9F"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M-126.5,106.5m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"/>
+  <path
+      android:pathData="M43.75,21.44l-15.38,15.38l-6.12,-6.12l-2.93,2.93l9.05,9.05l18.31,-18.31z"
+      android:fillColor="#A09F9F"/>
 </vector>
