--- a/app/src/main/res/layout/popup_video.xml
+++ b/app/src/main/res/layout/popup_video.xml
@@ -23,25 +23,25 @@
         android:layout_height="wrap_content">
 
 
-        <HorizontalScrollView
-            android:fillViewport="true"
+
+
+
+        <EditText
+            android:id="@+id/edt"
+            android:inputType="textFilter"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:scrollHorizontally="true"
+            android:fontFamily="@font/arial"
+            android:layout_margin="10dp"
+            android:textSize="@dimen/detailTextSize"
+            android:overScrollMode="always"
+            android:scrollbarStyle="insideInset"
+            android:scrollbars="horizontal"
+            />
 
 
-            <EditText
-                android:id="@+id/edt"
-                android:inputType="textFilter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollHorizontally="true"
-                android:fontFamily="@font/arial"
-                android:layout_margin="10dp"
-                android:textSize="@dimen/detailTextSize"
-                />
 
-
-        </HorizontalScrollView>
 
     </LinearLayout>
 
