--- a/app/src/main/res/layout/popup_video.xml
+++ b/app/src/main/res/layout/popup_video.xml
@@ -27,7 +27,7 @@
 
 
         <EditText
-            android:id="@+id/edt"
+            android:id="@+id/userInputEditText"
             android:inputType="textFilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
