--- a/app/src/main/res/drawable/ic_left_align.xml
+++ b/app/src/main/res/drawable/ic_left_align.xml
@@ -1,29 +1,16 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="54dp"
-    android:height="54dp"
-    android:viewportWidth="54"
-    android:viewportHeight="54">
+<vector android:height="45dp" android:viewportHeight="54"
+    android:viewportWidth="54" android:width="45dp" xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-  <path
-      android:pathData="M13,16.5L42,16.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,23.83L34,23.83"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,31.17L42,31.17"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-  <path
-      android:pathData="M13,38.5L34,38.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#A09F9F"/>
-
+    <path android:fillColor="#00000000"
+        android:pathData="M13,16.5L42,16.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,23.83L34,23.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,31.17L42,31.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,38.5L34,38.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
 </vector>
